src/validation/tests/snapshots/rusty__validation__tests__array_validation_test__type_level_struct_array_too_many.snap
---
source: src/validation/tests/array_validation_test.rs
expression: diagnostics
---
error[E043]: Too many initial values for array `arraytype`. Expected 2, found 3.
  ┌─ <internal>:7:54
  │
7 │         TYPE arraytype : ARRAY [1..2] OF myStruct := [(first := 5, second := FALSE), (first := 10, second := TRUE), (first := 15, second := FALSE)];
  │                                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Too many initial values for array `arraytype`. Expected 2, found 3.
